<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Weapon">

    <TextView
        android:id="@+id/txtWeapon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:text="@string/weapon"
        />

    <GridView
        android:id="@+id/gvWeapon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:numColumns="2"
        android:layout_marginTop="100dp"
        />

    <TextView
        android:id="@+id/txtWeaponName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="110dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text=""
        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:backgroundTint="@color/green"
        />

    <Button
        android:id="@+id/btnCharacter"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/character"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        />
    <Button
        android:id="@+id/btnRelic"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/relic"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        />
</RelativeLayout>