<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/themeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/switchTheme"
        android:layout_alignTop="@id/switchTheme"
        android:layout_marginEnd="8dp"/>

    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="88dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="16dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/honkai"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btnInventory"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/inventory"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="330dp"
        android:shadowColor="@color/black"/>

    <Button
        android:id="@+id/btnMusic"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/music"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="410dp"/>

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/picture"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="490dp"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/logout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="570dp"/>

</RelativeLayout>